added docker-compose
