# docs/swagger.json
@@ -123,16 +123,10 @@
     "definitions": {
         "handler.AssignTaskReq": {
             "type": "object",
-            "required": [
-                "method",
-                "url"
-            ],
             "properties": {
                 "body": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "type": "string",
+                    "example": "some body"
                 },
                 "headers": {
                     "type": "object",
@@ -145,8 +139,6 @@
                 },
                 "method": {
                     "type": "string",
-                    "maxLength": 6,
-                    "minLength": 3,
                     "example": "GET"
                 },
                 "url": {
