# internal/handler/entities.go
@@ -2,6 +2,7 @@ package handler
 
 import (
 	"github.com/google/uuid"
+	"github.com/pkg/errors"
 	"github.com/zhenisduissekov/http-3rdparty-task-service/internal/entity"
 	"github.com/zhenisduissekov/http-3rdparty-task-service/internal/service"
 )
@@ -11,6 +12,7 @@ const (
 	StatusError            = "error"
 	statusNew              = "new"
 	BadRequestErrMsg       = "please check your request"
+	NotAcceptableErrMsg    = "not acceptable"
 	ServerErrMsg           = "server error, please check your request or try again"
 	TaskAssignedMsg        = "task assigned"
 	TaskCheckedMsg         = "task checked"
@@ -52,13 +54,17 @@ type TaskStatusResp struct {
 }
 
 type AssignTaskReq struct {
-	Method  string            `json:"method" validate:"required,min=3,max=6,alpha,uppercase" example:"GET"`
-	Url     string            `json:"url" validate:"required" example:"http://google.com"`
-	Headers map[string]string `json:"headers" validate:"omitempty" example:"'Authentication'': 'Basic bG9naW46cGFzc3dvcmQ='"`
-	ReqBody []byte            `json:"body" validate:"omitempty" `
+	Method  string            `json:"method" example:"GET"`
+	Url     string            `json:"url" example:"http://google.com"`
+	Headers map[string]string `json:"headers" example:"'Authentication'': 'Basic bG9naW46cGFzc3dvcmQ='"`
+	ReqBody string            `json:"body" example:"some body"`
 }
 
-func (a *AssignTaskReq) convert2service() entity.Task {
+func (a *AssignTaskReq) convert2service() (entity.Task, error) {
+	if a.Method == "" || a.Url == "" || (a.Method != "GET" && a.Method != "POST") {
+		return entity.Task{}, errors.New(NotAcceptableErrMsg)
+	}
+
 	return entity.Task{
 		Id:      uuid.New().String(),
 		Method:  a.Method,
@@ -66,7 +72,7 @@ func (a *AssignTaskReq) convert2service() entity.Task {
 		Headers: a.Headers,
 		ReqBody: a.ReqBody,
 		Status:  statusNew,
-	}
+	}, nil
 }
 
 type CheckTaskResp struct {
